--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <v-app>
       <v-main>
         <v-container fluid>
-          <v-btn to='/vaccini.html'>Vaccini Covid-19 Italia</v-btn>
+          <v-btn class="primary" to='/vaccini.html'>Vaccini Covid-19 Italia</v-btn>
         </v-container>
       </v-main>
     </v-app>
