--- a/vaccini.html
+++ b/vaccini.html
@@ -4,11 +4,13 @@
   <title>Vaccinazioni COVID-19 Italia</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+  <link href="loader.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 </head>
 <body>
   <div id="app">
     <v-app>
+      <div id="pageLoader" class="loaderContent"><div class="spinner"></div></div>
       <v-main>
         <v-container fluid>
           <h1 class="my-4 text-h3">Vaccinazioni COVID-19 Italia</h1>
@@ -81,7 +83,7 @@
           </v-row>
         </v-container>
       </v-main>
-      <v-footer>Origine dati: analysis.windows.net<v-spacer></v-spacer>Aggiornato al: {{ updated_at.toLocaleString('it-IT') }}</v-footer>
+      <v-footer v-if="updated_at">Origine dati: analysis.windows.net<v-spacer></v-spacer>Aggiornato al: {{ updated_at.toLocaleString('it-IT') }}</v-footer>
     </v-app>
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -130,6 +132,20 @@
         axios
           .post('https://wabi-europe-north-b-api.analysis.windows.net/public/reports/querydata',{"version":"1.0.0","queries":[{"Query":{"Commands":[{"SemanticQueryDataShapeCommand":{"Query":{"Version":2,"From":[{"Name":"t2","Entity":"TAB_MASTER_PIVOT","Type":0}],"Select":[{"Column":{"Expression":{"SourceRef":{"Source":"t2"}},"Property":"Categoria Attributo"},"Name":"TAB_MASTER_PIVOT.Categoria Attributo"},{"Aggregation":{"Expression":{"Column":{"Expression":{"SourceRef":{"Source":"t2"}},"Property":"Valore"}},"Function":0},"Name":"Sum(TAB_MASTER_PIVOT.Valore)"}],"OrderBy":[{"Direction":1,"Expression":{"Column":{"Expression":{"SourceRef":{"Source":"t2"}},"Property":"Categoria Attributo"}}}]},"Binding":{"Primary":{"Groupings":[{"Projections":[0,1]}]},"DataReduction":{"DataVolume":4,"Primary":{"Window":{"Count":1000}}},"Version":1}}}]},"CacheKey":"{\"Commands\":[{\"SemanticQueryDataShapeCommand\":{\"Query\":{\"Version\":2,\"From\":[{\"Name\":\"t2\",\"Entity\":\"TAB_MASTER_PIVOT\",\"Type\":0}],\"Select\":[{\"Column\":{\"Expression\":{\"SourceRef\":{\"Source\":\"t2\"}},\"Property\":\"Categoria Attributo\"},\"Name\":\"TAB_MASTER_PIVOT.Categoria Attributo\"},{\"Aggregation\":{\"Expression\":{\"Column\":{\"Expression\":{\"SourceRef\":{\"Source\":\"t2\"}},\"Property\":\"Valore\"}},\"Function\":0},\"Name\":\"Sum(TAB_MASTER_PIVOT.Valore)\"}],\"OrderBy\":[{\"Direction\":1,\"Expression\":{\"Column\":{\"Expression\":{\"SourceRef\":{\"Source\":\"t2\"}},\"Property\":\"Categoria Attributo\"}}}]},\"Binding\":{\"Primary\":{\"Groupings\":[{\"Projections\":[0,1]}]},\"DataReduction\":{\"DataVolume\":4,\"Primary\":{\"Window\":{\"Count\":1000}}},\"Version\":1}}}]}","QueryId":"","ApplicationContext":{"DatasetId":"5bff6260-1025-49e0-8e9b-169ade7c07f9","Sources":[{"ReportId":"b548a77c-ab0a-4d7c-a457-2e38c2914fc6"}]}}],"cancelQueries":[],"modelId":4280811})
           .then(response => (this.categorie = response.data.results[0].result.data.dsr.DS[0].PH[0].DM0))
+
+        if (!('remove' in Element.prototype)) {
+          Element.prototype.remove = function () {
+            if (this.parentNode) {
+              this.parentNode.removeChild(this)
+            }
+          }
+        }
+        // document.body.classList.remove('hidden')
+        const el = document.getElementById('pageLoader')
+        if (el) {
+          el.classList.add('hide')
+          setTimeout(el.remove(), 0.5)
+        }
       }
     })
   </script>
