--- a/index.html
+++ b/index.html
@@ -12,8 +12,41 @@
     <v-app>
       <div id="pageLoader" class="loaderContent"><div class="spinner"></div></div>
       <v-main>
-        <v-container fluid>
-          <v-btn class="primary" href='/vaccini.html'>Vaccini Covid-19 Italia</v-btn>
+        <v-container fluid class="ma-0 pa-0">
+          <v-row no-gutters>
+            <v-col cols="12" md="6">
+              <v-card tile height="50vh" class="d-flex align-center justify-center" :color="colors[0]" elevation="0">
+                <v-card color="transparent" elevation="0">
+                  <div class="text-h2 text-lg-h1 font-weight-black light">Carlo</div>
+                  <div class="text-center">carlo.feller@gmail.com</div>
+                </v-card>
+              </v-card>
+            </v-col>
+            <v-col cols="12" md="6">
+              <v-card tile height="50vh" class="d-flex align-center justify-center" :color="colors[1]" elevation="0">
+                <v-card color="transparent" elevation="0">
+                  <div class="text-h2 text-lg-h1 font-weight-black">Feller</div>
+                  <div class="text-center">Milan, Italy</div>
+                </v-card>
+              </v-card>
+            </v-col>
+            <v-col cols="12" md="6">
+              <v-card tile height="50vh" class="d-flex align-center justify-center" :color="colors[2]" elevation="0">
+                <v-card color="transparent" elevation="0">
+                  <div class="text-h2 text-lg-h1 font-weight-black">Web</div>
+                  <div class="text-center">HTML, CSS, JS, PHP, SQL</div>
+                </v-card>
+              </v-card>
+            </v-col>
+            <v-col cols="12" md="6">
+              <v-card tile height="50vh" class="d-flex align-center justify-center" :color="colors[3]" elevation="0">
+                <v-card color="transparent" elevation="0">
+                  <div class="text-h2 text-lg-h1 font-weight-black">Development</div>
+                  <div class="text-center font-italic">non breaking spaces</div>
+                </v-card>
+              </v-card>
+            </v-col>
+          </v-row>
         </v-container>
       </v-main>
     </v-app>
@@ -39,6 +72,11 @@
         if (el) {
           el.classList.add('hide')
           setTimeout(el.remove(), 0.5)
+        }
+      },
+      data() {
+        return {
+          colors: ['#CF5C36','#60495A','#567568','#B7990D']
         }
       }
     })
