--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <v-card tile height="50vh" class="d-flex align-center justify-center" :color="colors[3]" elevation="0">
                 <v-card color="transparent" elevation="0">
                   <div class="text-h2 text-lg-h1 font-weight-black">Development</div>
-                  <div class="text-center font-italic">non breaking spaces</div>
+                  <div class="text-center font-italic">non&nbsp;breaking&nbsp;spaces</div>
                 </v-card>
               </v-card>
             </v-col>
